fix the z-index issue

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -467,6 +467,7 @@ pre[ref="SCSS"] {
    -ms-transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
    -o-transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
    transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+   z-index: 10;
 
    &.move-left {
         transform: translateX(-460px);
